--- a/log-switch-starter/pom.xml
+++ b/log-switch-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>LogLevelSwitch</artifactId>
-        <groupId>com.awan</groupId>
+        <groupId>io.github.saigu</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -24,7 +24,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.awan</groupId>
+            <groupId>io.github.saigu</groupId>
             <artifactId>log-switch-core</artifactId>
             <version>${project.version}</version>
         </dependency>
