--- a/log-switch-starter/pom.xml
+++ b/log-switch-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>LogLevelSwitch</artifactId>
         <groupId>io.github.saigu</groupId>
-        <version>1.0.0-ALPHA</version>
+        <version>1.0.0-beta</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
